# e-paper

./: !_gitignor_ignored.txt  .cproject  .cproject.bak  .gitignore  .mxproject  .project.bak  CMakeLists.txt  LICENSE  Makefile  README.md  STM32U073CCTx_FLASH.ld  ToDo.txt  e-paper_18x5 Debug.launch  e-paper_18x5.code-workspace  e-paper_18x5.ioc
Core/Inc/: AB1805.h  AB1805_RK.h  AB1815.h  AB1815_A.h  AB1815_registers.h  TimeLib.h  adc.h  adc_if.h  lpm.h  lwrb.h  main.h  moving_average.h  printf.h  stm32u0xx_hal_conf.h  stm32u0xx_it.h
Core/Src/: AB1805.c  AB1805_RK.c  AB1805_RK.cpp  AB1815.c  AB1815.c-old  Time.c  adc.c  adc_if.c  gpio.c  i2c.c  lpm.c  lwrb.c  main.c  moving_average.c  printf.c  rtc.c  spi.c  stm32u0xx_it.c  usart.c
Debug/: e-paper_18x5.elf  e-paper_18x5.list  e-paper_18x5.map  makefile  objects.list  sources.mk
Debug/Core/Src/: AB1805.cyclo  AB1805.d  AB1805.su  AB1805_RK.cyclo  AB1805_RK.d  AB1805_RK.su  AB1815.cyclo  AB1815.d  AB1815.su  adc.cyclo  adc.d  adc.su  adc_if.cyclo  adc_if.d  adc_if.su  gpio.d  gpio.su  i2c.d  i2c.su  lpm.cyclo  lpm.su  main.cyclo  main.d  main.su  moving_average.cyclo  moving_average.d  moving_average.su  printf.cyclo  printf.d  printf.su  rtc.cyclo  rtc.d  rtc.su  spi.d  spi.su  stm32u0xx_hal_msp.cyclo  stm32u0xx_hal_msp.d  stm32u0xx_hal_msp.su  stm32u0xx_it.cyclo  stm32u0xx_it.d  (+5 more)
Debug/Core/Startup/: startup_stm32u073cctx.d  subdir.mk
Debug/Drivers/STM32U0xx_HAL_Driver/Src/: stm32u0xx_hal.d  stm32u0xx_hal_adc.cyclo  stm32u0xx_hal_adc.d  stm32u0xx_hal_adc.su  stm32u0xx_hal_adc_ex.cyclo  stm32u0xx_hal_adc_ex.d  stm32u0xx_hal_adc_ex.su  stm32u0xx_hal_cortex.d  stm32u0xx_hal_dma.d  stm32u0xx_hal_dma_ex.d  stm32u0xx_hal_exti.d  stm32u0xx_hal_flash.d  stm32u0xx_hal_flash_ex.d  stm32u0xx_hal_gpio.d  stm32u0xx_hal_i2c.cyclo  stm32u0xx_hal_i2c.d  stm32u0xx_hal_i2c.su  stm32u0xx_hal_i2c_ex.cyclo  stm32u0xx_hal_i2c_ex.d  stm32u0xx_hal_i2c_ex.su  stm32u0xx_hal_pwr.d  stm32u0xx_hal_pwr_ex.d  stm32u0xx_hal_rcc.d  stm32u0xx_hal_rcc_ex.d  (+41 more)
Hardware/Gerber/: AM18x5.EXTREP  AM18x5.G1  AM18x5.G2  AM18x5.GBL  AM18x5.GBO  AM18x5.GBP  AM18x5.GBS  AM18x5.GM5  AM18x5.GTL  AM18x5.GTO  AM18x5.GTP  AM18x5.GTS  AM18x5.apr
MDK-ARM/: e-paper_18x5.uvguix.upo  e-paper_18x5.uvoptx  e-paper_18x5.uvprojx  startup_stm32u073xx.s
MDK-ARM/RTE/_e-paper_18x5/: RTE_Components.h
MDK-ARM/e-paper_18x5/: adc.d  adc_if.d  e-paper_18x5.axf  e-paper_18x5.build_log.htm  e-paper_18x5.hex  e-paper_18x5.htm  e-paper_18x5.lnp  e-paper_18x5.map  e-paper_18x5_e-paper_18x5.dep  gpio.d  i2c.d  lpm.d  lwrb.d  main.d  printf.d  rtc.d  spi.d  stm32u0xx_hal.d  stm32u0xx_hal_adc.d  stm32u0xx_hal_adc_ex.d  stm32u0xx_hal_cortex.d  stm32u0xx_hal_dma.d  stm32u0xx_hal_dma_ex.d  stm32u0xx_hal_exti.d  stm32u0xx_hal_flash.d  stm32u0xx_hal_flash_ex.d  stm32u0xx_hal_gpio.d  stm32u0xx_hal_i2c.d  stm32u0xx_hal_i2c_ex.d  stm32u0xx_hal_msp.d  stm32u0xx_hal_pwr.d  stm32u0xx_hal_pwr_ex.d  stm32u0xx_hal_rcc.d  stm32u0xx_hal_rcc_ex.d  stm32u0xx_hal_rtc.d  stm32u0xx_hal_rtc_ex.d  stm32u0xx_hal_spi.d  stm32u0xx_hal_spi_ex.d  stm32u0xx_hal_tim.d  stm32u0xx_hal_tim_ex.d  (+9 more)
User/BME280/: bme280.c  bme280.h  bme280_defs.h  bme280_utils.c  bme280_utils.h
User/e-Paper/: DEV_Config.c  DEV_Config.h  Debug.h  EPD_1in54_V2.c  EPD_1in54_V2.h  GUI_Paint.c  GUI_Paint.h  calibri_104pts.c  calibri_20pts.c  calibri_24pts.c  calibri_28pts.c  calibri_36pts.c  calibri_72pts.c  calibri_80pts.c  calibri_88pts.c  fonts.h  paint_sensor.c  paint_sensor.h
cmake/: gcc-arm-none-eabi.cmake  gcc-arm-none-eabi.cmake.bak
cmake/stm32cubemx/: CMakeLists.txt
(+115 files in other folders)
